fix: poprawa obsługi storage oraz wywołań do opl
